--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       working-directory: ./dream-journal-api
 
     - name: Run tests with coverage
-      run: npm run test:coverage
+      run: npx jest --coverage
       working-directory: ./dream-journal-api
 
     - name: Start Server for Keploy Tests
